--- a/Style.css
+++ b/Style.css
@@ -17,7 +17,6 @@ body{
 }
 .container{
     width: 550px;
-    height: 450px;
 }
 
 .header{
@@ -32,11 +31,12 @@ body{
 }
 .main-content{
     width: 100%;
-    height: 300px;
     background-color: #fff;
     border-radius: 15px;
     padding: 50px 40px;
     box-shadow: 0 0 10px;
+    transition: all 0.3s ease;
+    min-height: 300px;
 }
 .main-content .text-area{
     font-size: 1.5rem;
@@ -62,4 +62,14 @@ body{
 }
 .button-area button:active{
     background-color: lightblue;
+}
+
+
+@media screen and (max-width: 450px) {
+    .container{
+        margin: 1rem;
+    }
+    html{
+        font-size: 14px;
+    }
 }
